--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
                     <span id="msg"></span> -->
-                    <form action="https://formsubmit.co/ruigodinho90@gmail.com" method="POST">
-                        <input type="hidden" name="_captcha" value="false">
+                    <form action="https://submit-form.com/JxKqgBHD" method="POST">
                         <input type="text" name="name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="message" rows="10" placeholder="Your Message"></textarea>
