--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
-                    <p>After several years of digging up ancient contexts and unraveling Man's problems since the beginning of his existence, I decided to embark on an adventure that influences us in the present and will continue into the future.
+                    <p>After several years of digging up ancient contexts and unraveling humankind's problems since the beginning their his existence, I decided to embark on an adventure that influences us in the present and will continue into the future.
                         Now I'm a 𝘓𝘶𝘥𝘦𝘯𝘴, looking for ways to live with digital technology and shape it to our needs!</p>
 
                         <div class="tab-titles">
@@ -58,7 +58,7 @@
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>Full-Stack Development</span><br>Proficient in both front-end and back-end web development, designing user interfaces, implementing functionality, and managing databases.</br></li>
+                                <li><span>Full-Stack Development</span><br>Both front-end and back-end web development, designing user interfaces, implementing functionality, and managing databases.</br></li>
                                 <li><span>Web Development</span><br>Developing web applications using front-end technologies like HTML, CSS, and JavaScript, as well as back-end technologies like Node.js or Ruby on Rails.</br></li>
                                 <li><span>Version Control</span><br>Familiarity with Git and experience in collaborating with teams using version control systems to manage codebase and track changes.</br></li>
                             </ul>
@@ -120,7 +120,7 @@
                     <div class="layer">
                         <h3>Tic-Tac-Toe</h3>
                         <p>Tic-tac-toe game for 2 players or VS computer project from JS course</p>
-                        <a href="#"><i class="fas fa-external-link"></i></a>
+                        <a href="https://github.com/Godinho90/tic-tac-toe" target="_blank"><i class="fas fa-external-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -128,7 +128,7 @@
                     <div class="layer">
                         <h3>Brick Game</h3>
                         <p>A simple version of a classic arcade game made with Java and JFrame library!</p>
-                        <a href="#"><i class="fas fa-external-link"></i></a>
+                        <a href="https://github.com/Godinho90/brickgame" target="_blank"><i class="fas fa-external-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
